tests/ctu/pass/local.ct
export def a(): void {
    var x = 5;
    var z = x;
}