tests/ctu/fail/tall.ct
var x = 10;

def y(): void {
    y
    (
        5
    );
}
